--- a/portfolio-details2.html
+++ b/portfolio-details2.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Event Registration System</title>
+  <title>Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -98,15 +98,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets\img\e1.jpg" alt="">
+                  <img src="assets\img\p1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\e2.jpg" alt="">
+                  <img src="assets\img\p2.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\e3.jpg" alt="">
+                  <img src="assets\img\p3.jpg" alt="">
                 </div>
 
               </div>
@@ -118,15 +118,16 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Website</li>
-                <li><strong>Project date</strong>:20 Apr,2023</li>
-                <!-- <li><strong>Project URL</strong>: <a href="#"></a></li> -->
+                <li><strong>Category</strong>: Web design</li>
+                <li><strong>Project date</strong>:10 Nov,2022</li>
+                <li><strong>Project URL</strong>: <a href="https://deepthireddy-03.github.io/Portfolio/">https://deepthireddy-03.github.io/Portfolio/</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Event Registration System</h2>
+              <h2>Deepthi's Portfolio</h2>
               <p>
-                A website which has database created using HTML, CSS and PHP. Through this site,you can register for the events in the college where the data gets stored in the database.
+                A static website which has details of mine.
+
               </p>
             </div>
           </div>
